[gd_scene load_steps=3 format=3 uid="uid://6dikqxysux0p"]

[ext_resource type="Script" path="res://user_interface/main_canvas/team_info_menu_group/skill_tree_menu/skill_tree_menu.gd" id="1_svpp6"]
[ext_resource type="PackedScene" uid="uid://ynd4jyc4neao" path="res://user_interface/main_canvas/team_info_menu_group/skill_tree_menu/skill_info/skill_info.tscn" id="4_gif3o"]

[node name="SkillTreeMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_svpp6")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 60
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="StreeHolder" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 30

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(10, 0)
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_top = 50
theme_override_constants/margin_bottom = 30

[node name="Skill_Info" parent="MarginContainer/HBoxContainer/MarginContainer" instance=ExtResource("4_gif3o")]
unique_name_in_owner = true
layout_mode = 2
metadata/_edit_use_anchors_ = true

[node name="StreeHolder2" type="TabContainer" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
self_modulate = Color(0.976471, 0.976471, 0.976471, 0.419608)
z_index = -2
layout_mode = 2
mouse_filter = 2
